Add: css and js initial files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Memory game</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -68,5 +69,6 @@
   <!-- Game board end -->
 
 
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
