--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
 </head>
 <body>
 
-  <!-- Game setup start -->
+ <section class="start-game">
+   <h2>Memory game</h2>
+   <div class="game-board">
+      <div class="game-board-content content-top">
+        <p>Select Theme</p>
+        <div class="select-theme-buttons">
+          <button class="btn numbers" id="numbers">Numbers</button>
+          <button class="btn icons" id="icons">Icons</button>
+        </div>
+      </div>
+      <!-- numbers of players section -->
+      <div class="game-board-content">
+        <p>Numbers of players</p>
+        <div class="select-theme-buttons">
+          <button class="btn one" id="one">1</button>
+          <button class="btn two" id="two">2</button>
+          <button class="btn three" id="three">3</button>
+          <button class="btn four" id="four">4</button>
+        </div>
+      </div>
+      <!-- grid size -->
+      <div class="game-board-content">
+        <p>Grid size</p>
+        <div class="select-theme-buttons">
+          <button class="btn grid-one" id="grid-one">4x4</button>
+          <button class="btn grid-two" id="grid-two">6x6</button>
+        </div>
+      </div>
+      <!-- start button -->
+      <div class="game-board-content">        
+        <div class="select-theme-buttons" >
+          <button class="btn start-game-btn" id="start-game-btn">Start Game</button>         
+        </div>
+      </div>
+   </div>
+ </section>
+
+
+
+  <!-- Game setup start
 
   Select Theme
   Numbers
@@ -27,48 +66,48 @@
   4x4
   6x6
 
-  Start Game
+  Start Game -->
 
   <!-- Game setup end -->
 
   <!-- Game board start -->
 
-  Restart
-  New Game
+  <!-- Restart
+  New Game -->
 
   <!-- Multiplayer scores start -->
 
-  Player 1
+  <!-- Player 1 -->
   <!-- P1 score -->
-  Current Turn
-
-  Player 2
+  <!-- Current Turn -->
+<!-- 
+  Player 2 -->
   <!-- P2 score -->
-  Current Turn
+  <!-- Current Turn -->
 
-  Player 3
-  <!-- P3 score -->
-  Current Turn
+  <!-- Player 3
+  P3 score
+  Current Turn -->
 
-  Player 4
+  <!-- Player 4 -->
   <!-- P4 score -->
-  Current Turn
+  <!-- Current Turn -->
 
   <!-- Multiplayer scores start -->
 
   <!-- Solo game time and moves counter start -->
-
-  Time
+<!-- 
+  Time -->
   <!-- Time elapsed -->
-
-  Moves
+<!-- 
+  Moves -->
   <!-- Moves total -->
 
   <!-- Solo game time and moves counter end -->
 
   <!-- Game board end -->
 
-
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="./scripts/script.js"></script>
 </body>
 </html>
