Update: Logic added for funtionality

--- a/icons.html
+++ b/icons.html
@@ -7,14 +7,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Memory game</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
 
  <section class="start-game">
    <h2>Memory game</h2>
-   <div class="game-board start-up">
+   <div class="game-board">
       <div class="game-board-content content-top">
         <p>Select Theme</p>
         <div class="select-theme-buttons">
@@ -46,17 +46,6 @@
           <button class="btn start-game-btn" id="start-game-btn">Start Game</button>         
         </div>
       </div>
-   </div>
-   
-   <!-- game board for the icons -->
-   <div class="game-board icons">
-      <h2>Icons</h2>
-   </div>
-
-   <!-- game board for the numbers -->
-
-   <div class="game-board numbers">
-      <h2>Numbers</h2>
    </div>
  </section>
 
