--- a/number.html
+++ b/number.html
@@ -7,18 +7,18 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Memory game</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
 
  <section class="start-game">
    <h2>Memory game</h2>
-   <div class="game-board start-up">
+   <div class="game-board">
       <div class="game-board-content content-top">
         <p>Select Theme</p>
         <div class="select-theme-buttons">
-          <button class="btn numbers" id="numbers">Numbers</button>
+          <button class="btn numbers selected" id="numbers">Numbers</button>
           <button class="btn icons" id="icons">Icons</button>
         </div>
       </div>
@@ -26,7 +26,7 @@
       <div class="game-board-content">
         <p>Numbers of players</p>
         <div class="select-theme-buttons">
-          <button class="btn one" id="one">1</button>
+          <button class="btn one selected" id="one">1</button>
           <button class="btn two" id="two">2</button>
           <button class="btn three" id="three">3</button>
           <button class="btn four" id="four">4</button>
@@ -36,7 +36,7 @@
       <div class="game-board-content">
         <p>Grid size</p>
         <div class="select-theme-buttons">
-          <button class="btn grid-one" id="grid-one">4x4</button>
+          <button class="btn grid-one selected" id="grid-one">4x4</button>
           <button class="btn grid-two" id="grid-two">6x6</button>
         </div>
       </div>
@@ -47,16 +47,16 @@
         </div>
       </div>
    </div>
-   
+
    <!-- game board for the icons -->
    <div class="game-board icons">
-      <h2>Icons</h2>
+
    </div>
 
    <!-- game board for the numbers -->
 
    <div class="game-board numbers">
-      <h2>Numbers</h2>
+
    </div>
  </section>
 
